feact: added files at project

--- a/src/app/pages/dashboard-home/dashboard-home.component.html
+++ b/src/app/pages/dashboard-home/dashboard-home.component.html
@@ -8,8 +8,17 @@
       <input type="text" name="" placeholder="Ingresar Nombre" formControlName="name" id="">
       <input type="text" name="" placeholder="Ingresar Email"  formControlName="email" id="">
       <input type="text" name="" placeholder="Ingresar Contraseña" formControlName="password" id="">
-
+      <button pButton pRipple type="button" label="Secondary" class="p-button-secondary">Boton</button>
       <button type="submit">Agregar</button>
   </form>
   </div>
+</section>
+
+<section>
+  <button pButton pRipple type="button" label="Primary"></button>
+  <button pButton pRipple type="button" label="Primary" class="p-button-raised"></button>
+  <button pButton pRipple type="button" label="Primary" class="p-button-raised"></button>
+  
+
+  <button pButton pRipple type="button" label="Success" class="p-button-success"></button>
 </section>
