feact: upgrade files project

--- a/src/app/authentication/authentication-login/authentication-login.component.html
+++ b/src/app/authentication/authentication-login/authentication-login.component.html
@@ -1,3 +1,14 @@
-<p-card header="header">
-  Content
-</p-card>
+<section class="container__login">
+  <section class="container__card">
+    <div class="container__card-header">
+      <h1>Login</h1>
+    </div>  
+    <div class="container__card-body">
+      <input type="text" placeholder="Name">
+      <input type="password" placeholder="Password">
+    </div>
+    <div class="container__card-footer">
+      <button type="button">Iniciar</button>
+    </div>
+  </section>
+</section>
